[tool.poetry]
name = "poetry add flask  # (or whatever your project uses)"
version = "poetry export -f requirements.txt --output requirements.txt --without-hashes"
description = "poetry for this project"
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
